Fix up the speach audio manager (#73)